--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,25 @@
         border-bottom: 2px solid navy;
     }
 
+    .about > p {
+        padding: 3%;
+    }
+
+    .work-experience {
+        /* flex-direction: column */
+        row-gap: 3vh;
+    }
+
+    .work-experience h3 {
+        color: darkslategrey;
+        font-weight: 600;
+    }
+
+    .work-experience > article {
+        border: 2px solid lightgray;
+        border-radius: 3%;
+    }
+
     .skills {
         display: flex;
         flex-direction: column;
